--- a/src/static/index.html
+++ b/src/static/index.html
@@ -46,5 +46,55 @@
     </footer>
 
     <script src="app.js"></script>
+    <script>
+      document.addEventListener('DOMContentLoaded', () => {
+        // Fetch activities and participants data
+        fetchActivities();
+      });
+
+      function fetchActivities() {
+        // Simulate fetching data
+        const activities = [
+          {
+            name: 'Basketball',
+            participants: ['John Doe', 'Jane Smith']
+          },
+          {
+            name: 'Chess Club',
+            participants: ['Alice Johnson', 'Bob Brown']
+          }
+        ];
+
+        const activitiesList = document.getElementById('activities-list');
+        activitiesList.innerHTML = '';
+
+        activities.forEach(activity => {
+          const activityCard = document.createElement('div');
+          activityCard.className = 'activity-card';
+
+          const activityTitle = document.createElement('h4');
+          activityTitle.textContent = activity.name;
+          activityCard.appendChild(activityTitle);
+
+          const participantsSection = document.createElement('div');
+          participantsSection.className = 'participants';
+
+          const participantsTitle = document.createElement('h5');
+          participantsTitle.textContent = 'Participants:';
+          participantsSection.appendChild(participantsTitle);
+
+          const participantsList = document.createElement('ul');
+          activity.participants.forEach(participant => {
+            const participantItem = document.createElement('li');
+            participantItem.textContent = participant;
+            participantsList.appendChild(participantItem);
+          });
+          participantsSection.appendChild(participantsList);
+
+          activityCard.appendChild(participantsSection);
+          activitiesList.appendChild(activityCard);
+        });
+      }
+    </script>
   </body>
 </html>
